--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,8 @@
                 <h1 class="display-main">Contactos</h1>
                 <p>Nuestro Contacto es nuestras redes sociles para llevar a cabo este Proyecto con la materia clalificada Educacion Tecnologica.Por cualquier motivo que no estemos dsiponibles en nuestras redes sociales nuestro mail es (49085787ivt.edu.ar),Gracias por su Atencion!!! 
                     </p>   
-                <h1>Instagram:proyectotecnologicoivt</h1>
+                <h1>Instagram:
+                    proyectotecnologicoivt</h1>
                 </div>
 <img src="imagenes/logo.jpg" alt="Logo">
                     
